[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.13.1", features = ["async-std", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.10"
directories-next = "2.0"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.13.1", features = ["debug", "webgl"] }
uuid = { version = "1.0", features = ["js"] }
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"